# sintra

./: .cirrus.yml  .gitignore  .tmp_processing_harness.py  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_REVIEW_FINDINGS.md  CONTRIBUTING.md  DEADLOCK_ANALYSIS.md  DEADLOCK_ROOT_CAUSE.md  FILESYSTEM_CLEANUP_INVESTIGATION.md  RACE_CONDITION_ANALYSIS.md  README  README.md  README.rst  RELEASE_NOTES.md  RESET_NOTES.md  SHUTDOWN_FIX_PROGRESS.md  STACK_CAPTURE_OBJECTIVES.md  STACK_CAPTURE_STATUS.md  TECHNICAL_FINDINGS.md  TESTING.md  TESTING_GUIDE.md  WINDOWS_RECOVERY_IMPLEMENTATION_REPORT.md  boost_unused_headers.md  boost_used_headers.md  codecov.yml  prune_boost_conservative.py  sintra.h  test_manual_tests.py  trigger_ci.py  unused_code_report.md
.claude/: context.md  settings.local.json
.github/workflows/: build-freebsd.yml  build-linux.yml  build-macos.yml  build-windows-mingw.yml  build-windows.yml  coverage.yml  linux.yml  main.yml  stress-test-linux-run.yml  stress-test-linux.yml  stress-test-macos-run.yml  stress-test-macos.yml  stress-test-windows-run.yml  stress-test-windows.yml  tests-linux.yml  tests-macos.yml  tests-windows.yml  windows.yml
.scripts/: boost_prune_scan.py
backup_recovery_changes/: ipc_rings.h  managed_process_impl.h  message.h
cmake/: sintraConfig.cmake.in
doc/sintra/: README
docs/: ARCHITECTURE.md  BASIC_PUBSUB_TEST_ANALYSIS.md  DEBUGGING_METHODOLOGY.md  DOUBLE_UNLOCK_BUG_ANALYSIS.md  NEXT_PROMPT.md  RPC_APPEND_TEST_ANALYSIS.md  architecture.md  barrier_ack_next_steps.md  barrier_deadlock_repro.md  barrier_processing_deadlock_analysis.md  barrier_refactor_architecture.md  barrier_refactor_status.md  barriers_and_shutdown.md  boost_pruning_candidates.md  build_verification.md  diagnostics.md  disabled_choreography_tests.md  disabled_tests.md  duplication_and_simplification_report.md  dynamic_swarm_branch_review.md  dynamic_swarm_merge_plan.md  footgun_review_and_fail_fast_plan.md  freebsd_timeout_report.md  guide.md  lifecycle_recovery_plan.md  macos_interprocess_semaphore.md  macos_os_sync_semaphore.md  macos_semaphore_failure.md  maintainer_correctness_todo.md  plan_lifeline_args_migration.md  process_lifecycle_notes.md  proposed_spinlocked_containers.h  protocol_shape_guardrails_and_architecture.md  public_leave_api_design.md  review_last_two_commits.md  review_last_two_commits_implementation.md  rpc_deadline_and_async_lifecycle.md  shutdown_teardown_investigation.md  spinlocked_api_proposal.md  stalled_tests.md  (+11 more)
docs/archived/: barrier_refactor_architecture.md
docs/reference/: activate_slot.md  announce_fatal_windows_exception.md  barrier.md  barrier_modes.md  console.md  deactivate_all_slots.md  derived_transceiver.md  disable_debug_pause_for_current_process.md  explicit_type_ids.md  external_process_invitation.md  index.md  init.md  init_error.md  leave.md  (+32 more)
example/qt_basic/: CMakeLists.txt  README.md  cursor_sync_common.h  cursor_sync_receiver.cpp  cursor_sync_sender.cpp
example/qt_multi_cursor/: CMakeLists.txt  README.md  build_multi_cursor.bat  multi_cursor_common.h  multi_cursor_coordinator.cpp  multi_cursor_window.cpp  run_multi_cursor.bat
example/sintra/: CMakeLists.txt  sintra_example_0.cpp  sintra_example_0_basic_pubsub.cpp  sintra_example_1.cpp  sintra_example_1_ping_pong_multi.cpp  sintra_example_2.cpp  sintra_example_2_rpc_append.cpp  sintra_example_3.cpp  sintra_example_3_single_process.cpp  sintra_example_4_recovery.cpp  sintra_example_5_barrier_flush.cpp  sintra_example_6_dynamic_swarm.cpp  sintra_example_6_processing_fence.cpp  sintra_example_6_unicast_send_to.cpp  sintra_example_7_explicit_type_ids.cpp  sintra_example_8_ring_helpers.cpp  sintra_example_9_minimal_pubsub.cpp
examples/: sintra_example_3.cpp
pm/: coordinator.h  coordinator_impl.h  id_types.h  managed_process.h  managed_process_impl.h  process_message_reader.h  process_message_reader_impl.h  resolvable_instance.h  resolvable_instance_impl.h  resolve_type.h  sintra_impl.h  spinlocked_map.h  transceiver_impl.h
scripts/: build_reference_site.py  collect_lldb_backtraces.py  run_sintra_guarded.ps1
src/: sintra.cpp
tests/: .ci_trigger  CMakeLists.txt  TEST_REVIEW_PENDING.md  abi_description_test.cpp  active_tests.txt  barrier_complex_choreography_test.cpp  barrier_delivery_fence_repro_test.cpp  barrier_drain_and_unpublish_test.cpp  barrier_flush_test.cpp  barrier_guardrails_test.cpp  barrier_pathological_choreography_test.cpp  barrier_processing_fence_backlog_test.cpp  barrier_processing_reentrancy_test.cpp  barrier_rapid_reuse_test.cpp  barrier_self_reader_disabled_test.cpp  barrier_stress_test.cpp  basic_pub_sub.cpp  choreography_extreme_test.cpp  complex_choreography_stress_test.cpp  complex_choreography_test.cpp  console_test.cpp  coordinator_default_groups_test.cpp  coordinator_lifecycle_test.cpp  coordinator_lock_order_test.cpp  crash_capture_child_test.cpp  crash_capture_self_test.cpp  defensive_paths_test.cpp  delivery_fence_reply_skip_test.cpp  detached_external_collective_shutdown_contract_test.cpp  detached_member_exact_watch_contract_test.cpp  drain_wake_coordination_test.cpp  dummy_test.cpp  dynamic_revolving_door_test.cpp  dynamic_spawn_lifecycle_test.cpp  dynamic_swarm_test.cpp  exact_child_test_support.h  exception_conversions_test.cpp  explicit_type_id_test.cpp  external_process_first_rpc_concurrency_test.cpp  external_process_invitation_admission_negative_test.cpp  (+106 more)
tests/debuggers/: __init__.py  base.py  lldb_capture_all.py  unix.py  windows.py
tests/manual/: CMakeLists.txt  barrier_deadlock_reproduction_test.cpp  barrier_delivery_fence_repro_test.cpp  children_crash_coordinator_deadlock_test.cpp  coordinator_crash_children_hang_test.cpp  crash_capture_child_test.cpp  crash_capture_self_test.cpp  guard_pending_writer_integration_test.cpp  hang_test.cpp  lldb_multiprocess_hang_test.cpp  lldb_process_group_hang_test.cpp
tests/platform_utils/: __init__.py  base.py  darwin.py  unix.py  windows.py
tests/runner/: configuration.py  utils.py
tests/runner/platform/: __init__.py  _psutil.py  base.py  posix.py  windows.py
(+167 files in other folders)
